@@ -1,5 +1,9 @@
 [b]Version 0.6.5[/b]:
 
+(2008-11-07)
+ * Added a new option "Floating control" in Preferences->Interface. It allows
+   to configure the floating control (width, margin...).
+
 (2008-11-06)
  * (Experimental) Added the possibility to select the adaptor for xv. Requires
    at least MPlayer SVN r26762 (from 2008-05-13).
